[+] dev suite update

--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>@fiad/carpentry</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-  <script src="index.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>@fiad/carpetry | dev</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+  </head>
+  <body>
+    <main>
+      <!-- testing code here -->
+    </main>
+  </body>
 </html>
